# geo_graf

./: .gitattributes  .gitignore  CHANGELOG.md  NIGHTLY_STATUS.md  README.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.ps1
.github/workflows/: ci.yml
acceptance/: .gitignore  README.md  manifest.json  materialize_equivalent_xlsx.py
acceptance/cases/equivalent_excel_manual/: equivalent_protocol.csv  (+3 more)
acceptance/real_cases/: README.md  template_manifest.json
constraints/: ci.txt
docs/: HANDOFF_V05_SCOPE.md  INPUT_SCHEMA_V041A1.md  known_limitations.md  licensing_decision_required.md  manual-entry-draft-1.1.schema.json  manual-entry-draft-1.2.schema.json  release_readiness.md  windows_portable_distribution_spec.md
docs/methodology/: antonov_round_stamp_v1.md
examples/: demo_metadata.json  demo_protocol.csv  excel_column_mapping.example.json  indicator_calibration_demo.csv  indicator_calibration_demo.json  manual_entry_demo.json
scripts/: verify_demo_artifacts.py
soilstamp/: __init__.py  acceptance.py  analysis.py  cli.py  data.py  gui_manual_entry.py  indicators.py  io.py  manual_entry_adapter.py  manual_entry_models.py  manual_entry_service.py  manual_entry_validation.py  methodology.py  plotting.py  provenance.py  report_html.py  report_package.py  report_xlsx.py  reporting.py  schema.py  sources.py
soilstamp/ui/: __init__.py  column_labels_ru.py  formatters.py  i18n.py  labels_ru.py
tests/: conftest.py  test_acceptance.py  test_acceptance_cli.py  test_analysis.py  test_app.py  test_cli_methodology.py  test_data.py  test_excel_import.py  test_failure_analysis.py  test_image_regression.py  test_indicators.py  test_io.py  test_manual_entry_adapter.py  test_manual_entry_example.py  test_manual_entry_gui.py  test_manual_entry_models.py  test_manual_entry_service.py  test_manual_entry_validation.py  test_methodology.py  test_plotting.py  test_provenance.py  test_release_candidate_metadata.py  test_report_html.py  test_report_package.py  test_report_xlsx.py  test_reporting.py  test_sources.py  test_ui_i18n.py  test_verify_demo_artifacts.py
tests/fixtures/: legacy_demo_input.xlsx
(+18 files in other folders)
